Remove files from .gitigore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
+.idea
+*.iml
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
+/*/build
 /build
-/.idea
-/MayDay_Android_AntiPatterns.iml
-/app/app.iml
-/app/build.gradle
-/build.gradle
-/app/build
-.bundle
-Gemfile.lock
-vendor
+/captures
+/vendor
